<resources>
    <string name="app_name">Community-supported Agriculture</string>
    <string name="title_home">Home</string>
    <string name="title_market">Market</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">User</string>
    <string name="title_cart">Cart</string>
    <string name="title_dashboard">Notifications</string>
    <string name="goods_detail">认养详情</string>
    <string name="choose_specification">选择规格</string>
    <string name="weight_util">kg</string>
    <string name="guess_love">猜你喜欢</string>
    <string name="graphic_details">图文详情</string>
    <string name="platform">平台</string>
    <string name="supplier_info">管家信息</string>
    <string name="view_more_comment">查看更多评价</string>

    <string name="goods_price">%1$.2f元/公斤</string>
    <string name="plant_price">%1$.2f元/亩/年</string>
    <string name="livestock_price">%1$.2f元/只</string>
    <string name="fish_price">%1$.2f元/公斤</string>

    <string name="originFullName">产地：%1$s</string>
    <string name="consult">咨询</string>
    <string name="add_shopping">加入购物车</string>
    <string name="buy">立即认养</string>
    <string name="full_name">姓名</string>
    <string name="my_order">我的订单</string>
    <string name="view_more">查看更多</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_send">待发货</string>
    <string name="wait_receive">待收货</string>
    <string name="wait_comment">待评价</string>
    <string name="apply_after_sale">申请售后</string>
    <string name="refund_or_aftersale">退款/售后</string>
    <string name="location">所在地区</string>
    <string name="please_select_your_sex">请选择性别</string>
    <string name="sex">性别</string>
    <string name="please_enter_your_nickname">请输入昵称</string>
    <string name="please_choose_where_you_are">请选择所在地区</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="select_album">从相册中选择</string>
    <string name="take_photo">拍照</string>
    <string name="select_all">全选</string>
    <string name="actual_payment">实付款</string>
    <string name="settlement_with_num">结算（%1$d）</string>
    <string name="delete">删除</string>
    <string name="no_shopping">您的购物车暂无商品</string>
    <string name="go_for_walk">随便逛逛</string>

    <string name="click_see">点击查看</string>
    <string name="electronic_contract">《电子协议》</string>
    <string name="contract_year">协议年长</string>
    <string name="choose_contract_year">请选择协议年长</string>
    <string name="pay_type">付款方式</string>
    <string name="choose_pay_type">请选择付款类型</string>
    <string name="earnest_explain">定金说明</string>
    <string name="insurance_service">保险服务</string>
    <string name="insurance_explain">保险说明</string>
    <string name="remarks">备注信息</string>
    <string name="please_input_remarks">请输入备注</string>
    <string name="total_price">商品总额</string>
    <string name="insurance_price">保险费用</string>
    <string name="total">总计</string>
    <string name="earnest">定金</string>
    <string name="sum">合计：</string>
    <string name="pay">去付款</string>
    <string name="input_number">请输入要修改的数量</string>
    <string name="logout">退出登录</string>
    <string name="help_center">帮助中心</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="user_protocol">用户协议</string>
    <string name="version_info">版本信息</string>
    <string name="check_update">检查更新</string>
    <string name="pay_balance">余额支付</string>
    <string name="pay_wexin">微信支付</string>
    <string name="pay_ali">支付宝支付</string>
    <string name="call_now">立即拨打</string>
    <string name="comfig_call_service_phone">是否拨打客服电话？</string>
    <string name="confirm_call_suppler">是否拨打采购商电话？</string>

    <string name="good_name">产品名称</string>
    <string name="please_input_good_name">请输入产品名称</string>
    <string name="good_type">产品类型</string>
    <string name="please_choose_good_type">请选择产品类型</string>
    <string name="place">产地</string>
    <string name="please_choose_place">请选择产地</string>
    <string name="price">价格</string>
    <string name="please_input_price">请输入产品单价</string>
    <string name="inventory">库存</string>
    <string name="please_input_inventory">请输入库存</string>
    <string name="good_main_image">商品图片</string>
    <string name="first_image">(第一张为封面图)</string>
    <string name="please_input_good_detail">请输入产品详细文字说明</string>
    <string name="video">视频</string>

    <string name="inventoryF">库存:%d</string>
    <string name="orderNumber">订单号：</string>
    <string name="baseUrl">http://203.195.159.23:18088/api</string>
    <string name="amount">数量：%d</string>
    <string name="money">%.2f 元</string>
    <string name="year">%d 年</string>
</resources>
