<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="handler"
            type="com.graduation_project.wicky.csa.widget.UpdateNumberDialog.UpdateNumberDialogEvenHandler"/>
    </data>
<LinearLayout
    android:layout_width="@dimen/px500dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/px30dp"
        android:text="@string/input_number"
        android:textColor="@color/black"
        android:textSize="@dimen/px30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_reduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{handler::onClick}"
            android:src="@mipmap/btn_reduce" />

        <EditText
            android:id="@+id/et_choose_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/px20dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:inputType="number"
            android:minWidth="@dimen/px60dp"
            android:textColor="@color/black"
            android:textSize="@dimen/px30sp" />

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px20dp"
            android:onClick="@{handler::onClick}"
            android:src="@mipmap/btn_add" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1dp"
        android:layout_marginTop="@dimen/px30dp"
        android:background="@color/diver_dcdcdc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <com.graduation_project.wicky.csa.widget.BGButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="@{handler::onClick}"
            android:padding="@dimen/px20dp"
            android:text="@string/cancle"
            android:textSize="@dimen/px30sp"
            app:bottomLeftRadius="5dp"
            app:normalSolid="@color/white"
            app:normalTextColor="#191d21"
            app:pressedSolid="@color/main_color"
            app:pressedTextColor="@color/white" />

        <View
            android:layout_width="@dimen/px1dp"
            android:layout_height="match_parent"
            android:background="@color/diver_dcdcdc" />

        <com.graduation_project.wicky.csa.widget.BGButton
            android:id="@+id/commit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="@{handler::onClick}"
            android:padding="@dimen/px20dp"
            android:text="@string/confirm"
            android:textSize="@dimen/px30sp"
            app:bottomRightRadius="5dp"
            app:normalSolid="@color/white"
            app:normalTextColor="@color/red"
            app:pressedSolid="@color/red"
            app:pressedTextColor="@color/white" />

    </LinearLayout>

</LinearLayout>
</layout>